--- a/mulam/mahabharatam/RamaAvatara.tex
+++ b/mulam/mahabharatam/RamaAvatara.tex
@@ -1,6 +1,6 @@
 \chapt{महाभारतम्}
 
-\sect{अध्यायः ५० --- भीष्मेण रामावतारकथनम्}
+\sect{भीष्मेण रामावतारकथनम्}
 
 \src{श्रीमन्महाभारतम्}{सभा-पर्व}{अर्घाहरणपर्व}{अध्यायः ५०}
 \vakta{भीष्मः}
