--- a/mulam/padma-puranam/pura-kalpa-ramayana-varnanam.tex
+++ b/mulam/padma-puranam/pura-kalpa-ramayana-varnanam.tex
@@ -1,4 +1,4 @@
-\sect{षोडशोत्तरशततमोऽध्यायः}
+\sect{पुराकल्पीयरामायणकथनम्}
 
 \src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३३}{१--१८५}
 % \tags{concise, complete}
