--- a/mulam/padma-puranam/rama-agastya-samvada.tex
+++ b/mulam/padma-puranam/rama-agastya-samvada.tex
@@ -1,4 +1,4 @@
-\sect{षट्त्रिंशोऽध्यायः --- रामागस्त्यसंवादः}
+\sect{रामागस्त्यसंवादः}
 
 \src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३६}{१--१८५}
 % \tags{concise, complete}
