--- a/mulam/padma-puranam/rama-ashvamedha-prakaranam.tex
+++ b/mulam/padma-puranam/rama-ashvamedha-prakaranam.tex
@@ -1,8 +1,9 @@
-\dnsub{प्रथमोऽध्यायः}%\resetShloka
+\sect{रामाश्वमेधप्रकरणम्}
+\dnsub{प्रथमोऽध्यायः}\resetShloka
 
 \src{पद्म-पुराणम्}{पातालखण्डः}{अध्यायाः १--६८}{}
 % \tags{concise, complete}
-\notes{Rāma returns to Ayodhyā, reunites with Bharata, and is consecrated king. Sage Agastya visits and narrates Rāvaṇa’s story, advising Rāma to perform a horse sacrifice. Śatrughna is appointed to guard the sacrificial horse, leading to a campaign across various regions, marked by battles, pilgrimages, and moral episodes. Numerous kings are encountered and defeated, including Subāhu, Damana, and Vīramaṇi. Kuśa and Lava bind the horse, leading to confrontations with Rāma’s army. Eventually, the sacrifice is completed with the singing of the Rāmāyaṇa by the twins.}
+\notes{These 68 Chapters present a very detailed account of Rama's life after His return to Ayodhya. In over 4300 shlokas, a variety of events of discussed, as Rāma returns to Ayodhyā, reunites with Bharata, and is consecrated king. Sage Agastya visits and narrates Rāvaṇa's story, advising Rāma to perform a horse sacrifice. Śatrughna is appointed to guard the sacrificial horse, leading to a campaign across various regions, marked by battles, pilgrimages, and moral episodes. Numerous kings are encountered and defeated, including Subāhu, Damana, and Vīramaṇi. Kuśa and Lava bind the horse, leading to confrontations with Rāma's army. Eventually, the sacrifice is completed with the singing of the Rāmāyaṇa by the twins.}
 \textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_५_(पातालखण्डः)/अध्यायः_००१}
 \translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc365311.html}
 
@@ -192,7 +193,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य भरतावासनन्दिग्रामदर्शनो नाम प्रथमोऽध्यायः॥१॥}
 
-\dnsub{द्वितीयोऽध्यायः}%\resetShloka
+\dnsub{द्वितीयोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -361,7 +362,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे रामराजधानीदर्शनो नाम द्वितीयोऽध्यायः॥२॥}
 
-\dnsub{तृतीयोऽध्यायः}%\resetShloka
+\dnsub{तृतीयोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -511,7 +512,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्य पुरप्रवेशनं नाम तृतीयोऽध्यायः॥३॥}
 
-\dnsub{चतुर्थोऽध्यायः}%\resetShloka
+\dnsub{चतुर्थोऽध्यायः}\resetShloka
 
 \uvacha{वात्स्यायन उवाच}
 
@@ -742,7 +743,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुवरस्य राज्याभिषेको नाम चतुर्थोऽध्यायः॥४॥}
 
-\dnsub{पञ्चमोऽध्यायः}%\resetShloka
+\dnsub{पञ्चमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -958,7 +959,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे अगस्त्यसमागमो नाम पञ्चमोऽध्यायः॥५॥}
 
-\dnsub{षष्ठोऽध्यायः}%\resetShloka
+\dnsub{षष्ठोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -1144,7 +1145,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिर्नाम षष्ठोऽध्यायः॥६॥}
 
-\dnsub{सप्तमोऽध्यायः}%\resetShloka
+\dnsub{सप्तमोऽध्यायः}\resetShloka
 
 \uvacha{अगस्त्य उवाच}
 
@@ -1302,7 +1303,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रावणोत्पत्तिविपत्तिकथनन्नामसप्तमोऽध्यायः॥७॥}
 
-\dnsub{अष्टमोऽध्यायः}%\resetShloka
+\dnsub{अष्टमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -1466,7 +1467,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथस्यागस्त्योपदेशोनामाष्टमोऽध्यायः॥८॥}
 
-\dnsub{नवमोऽध्यायः}%\resetShloka
+\dnsub{नवमोऽध्यायः}\resetShloka
 
 \uvacha{श्रीराम उवाच}
 
@@ -1738,7 +1739,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सर्वधर्मोपदेशो नाम नवमोऽध्यायः॥९॥}
 
-\dnsub{दशमोऽध्यायः}%\resetShloka
+\dnsub{दशमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -2053,7 +2054,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नशिक्षाकथनं नाम दशमोऽध्यायः॥१०॥}
 
-\dnsub{एकादशोऽध्यायः}%\resetShloka
+\dnsub{एकादशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -2399,7 +2400,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयमोचनपुष्कलभार्यासमागमो नाम एकादशोऽध्यायः॥११॥}
 
-\dnsub{द्वादशोऽध्यायः}%\resetShloka
+\dnsub{द्वादशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -2766,7 +2767,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कामाक्षोपाख्यानं नाम द्वादशोऽध्यायः॥१२॥}
 
-\dnsub{त्रयोदशोऽध्यायः}%\resetShloka
+\dnsub{त्रयोदशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -3060,7 +3061,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नाहिच्छत्रापुरीप्रवेशो नाम त्रयोदशोऽध्यायः॥१३॥}
 
-\dnsub{चतुर्दशोऽध्यायः}%\resetShloka
+\dnsub{चतुर्दशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -3336,7 +3337,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनोपाख्यानं नाम चतुर्दशोऽध्यायः॥१४॥}
 
-\dnsub{पञ्चदशोऽध्यायः}%\resetShloka
+\dnsub{पञ्चदशोऽध्यायः}\resetShloka
 
 \uvacha{सुमतिरुवाच}
 
@@ -3584,7 +3585,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनस्य तपोभोगवर्णनं नाम पञ्चदशोऽध्यायः॥१५॥}
 
-\dnsub{षोडशोऽध्यायः}%\resetShloka
+\dnsub{षोडशोऽध्यायः}\resetShloka
 
 \uvacha{सुमतिरुवाच}
 
@@ -3813,7 +3814,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे च्यवनाश्रमे हयगमनो नाम षोडशोऽध्यायः॥१६॥}
 
-\dnsub{सप्तदशोऽध्यायः}%\resetShloka
+\dnsub{सप्तदशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -4155,7 +4156,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणसमागमो नाम सप्तदशोऽध्यायः॥१७॥}
 
-\dnsub{अष्टादशोऽध्यायः}%\resetShloka
+\dnsub{अष्टादशोऽध्यायः}\resetShloka
 
 \uvacha{ब्राह्मण उवाच}
 
@@ -4285,7 +4286,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे ब्राह्मणोपदेशोनामाष्टादशोऽध्यायः॥१८॥}
 
-\dnsub{ऊनविंशोऽध्यायः}%\resetShloka
+\dnsub{ऊनविंशोऽध्यायः}\resetShloka
 
 \uvacha{ब्राह्मण उवाच}
 
@@ -4537,7 +4538,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रत्नग्रीवस्य तीर्थप्रयाणन्नामैकोनविंशोऽध्यायः॥१९॥}
 
-\dnsub{विंशोऽध्यायः}%\resetShloka
+\dnsub{विंशोऽध्यायः}\resetShloka
 
 \uvacha{सुमतिरुवाच}
 
@@ -4918,7 +4919,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे गण्डकीमाहात्म्यं नाम विंशोऽध्यायः॥२०॥}
 
-\dnsub{एकविंशोऽध्यायः}%\resetShloka
+\dnsub{एकविंशोऽध्यायः}\resetShloka
 
 \uvacha{सुमतिरुवाच}
 
@@ -5124,7 +5125,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सन्न्यासिदर्शनं नाम एकविंशोऽध्यायः॥२१॥}
 
-\dnsub{द्वाविंशोऽध्यायः}%\resetShloka
+\dnsub{द्वाविंशोऽध्यायः}\resetShloka
 
 \uvacha{सुमतिरुवाच}
 
@@ -5389,7 +5390,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे नीलगिरिमहिमवर्णनं नाम द्वाविंशोऽध्यायः॥२२॥}
 
-\dnsub{त्रयोविंशोऽध्यायः}%\resetShloka
+\dnsub{त्रयोविंशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -5755,7 +5756,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे राजपुत्रयुद्धकथनं नाम त्रयोविंशोऽध्यायः॥२३॥}
 
-\dnsub{चतुर्विंशतितमोऽध्यायः}%\resetShloka
+\dnsub{चतुर्विंशतितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -6003,7 +6004,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलविजयो नाम चतुर्विंशतितमोऽध्यायः॥२४॥}
 
-\dnsub{पञ्चविंशोऽध्यायः}%\resetShloka
+\dnsub{पञ्चविंशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -6151,7 +6152,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुसैन्यसमागमो नाम पञ्चविंशोऽध्यायः॥२५॥}
 
-\dnsub{षड्विंशतितमोऽध्यायः}%\resetShloka
+\dnsub{षड्विंशतितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -6446,7 +6447,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे गदायुद्धं नाम षड्विंशतितमोऽध्यायः॥२६॥}
 
-\dnsub{सप्तविंशतितमोऽध्यायः}%\resetShloka
+\dnsub{सप्तविंशतितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -6648,7 +6649,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चित्राङ्गवधो नाम सप्तविंशतितमोऽध्यायः॥२७॥}
 
-\dnsub{अष्टाविंशतितमोऽध्यायः}%\resetShloka
+\dnsub{अष्टाविंशतितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -6956,7 +6957,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुबाहुपराजयो नाम अष्टाविंशतितमोऽध्यायः॥२८॥}
 
-\dnsub{एकोनत्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{एकोनत्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -7186,7 +7187,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य सुबाहुना सह निर्याणं नाम एकोनत्रिंशत्तमोऽध्यायः॥२९॥}
 
-\dnsub{त्रिंशोऽध्यायः}%\resetShloka
+\dnsub{त्रिंशोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -7526,7 +7527,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने जनकेन नरकस्थप्राणिमोचनं नाम त्रिंशोऽध्यायः॥३०॥}
 
-\dnsub{एकत्रिंशोऽध्यायः}%\resetShloka
+\dnsub{एकत्रिंशोऽध्यायः}\resetShloka
 
 \uvacha{जाबालिरुवाच}
 
@@ -7774,7 +7775,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवदाख्याने धेनुव्रतवर्णनं नाम एकत्रिंशोऽध्यायः॥३१॥}
 
-\dnsub{द्वात्रिंशोऽध्यायः}%\resetShloka
+\dnsub{द्वात्रिंशोऽध्यायः}\resetShloka
 
 \uvacha{सुमतिरुवाच}
 
@@ -7888,7 +7889,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सत्यवत्समागमो नाम द्वात्रिंशोऽध्यायः॥३२॥}
 
-\dnsub{त्रयस्त्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{त्रयस्त्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -8154,7 +8155,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरप्रतिज्ञाकथनं नाम त्रयस्त्रिंशत्तमोऽध्यायः॥३३॥}
 
-\dnsub{चतुस्त्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{चतुस्त्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -8488,7 +8489,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे विद्युन्मालिनामराक्षसपराजयो नाम चतुस्त्रिंशत्तमोऽध्यायः॥३४॥}
 
-\dnsub{पञ्चत्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{पञ्चत्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -8792,7 +8793,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यको पाख्याने लोमशारण्यकसंवादो नाम पञ्चत्रिंशत्तमोऽध्यायः॥३५॥}
 
-\dnsub{षट्त्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{षट्त्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेषउवाच}
 
@@ -9174,7 +9175,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लोमशारण्यकसंवादे रामचरित्रकथनं नाम षट्त्रिंशत्तमोऽध्यायः॥३६॥}
 
-\dnsub{सप्तत्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{सप्तत्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -9454,7 +9455,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे आरण्यकमुनेर्विष्णुलोकगमनं नाम सप्तत्रिंशत्तमोऽध्यायः॥३७॥}
 
-\dnsub{अष्टत्रिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{अष्टत्रिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{सूत उवाच}
 
@@ -9728,7 +9729,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नस्य योगिनीदर्शनजलमध्याद्वाहप्राप्तिर्नाम अष्टत्रिंशत्तमोऽध्यायः॥३८॥}
 
-\dnsub{एकोनचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{एकोनचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -9976,7 +9977,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिपुत्रेण हयग्रहणं नाम एकोनचत्वारिंशत्तमोऽध्यायः॥३९॥}
 
-\dnsub{चत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{चत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -10232,7 +10233,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणिना सह युद्धनिश्चयो नाम चत्वारिंशत्तमोऽध्यायः॥४०॥}
 
-\dnsub{एकचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{एकचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -10372,7 +10373,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रुक्माङ्गदपराजय पुष्कलविजयो नाम एकचत्वारिंशत्तमोऽध्यायः॥४१॥}
 
-\dnsub{द्विचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{द्विचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -10712,7 +10713,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे वीरमणेः पराभवो नाम द्विचत्वारिंशत्तमोऽध्यायः॥४२॥}
 
-\dnsub{त्रिचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{त्रिचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -10968,7 +10969,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलशत्रुघ्नपराजयो नाम त्रिचत्वारिंशत्तमोऽध्यायः॥४३॥}
 
-\dnsub{चतुश्चत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{चतुश्चत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -11312,7 +11313,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे द्रोणगिरौ देवानां पराजयो नाम चतुश्चत्वारिंशत्तमोऽध्यायः॥४४॥}
 
-\dnsub{पञ्चचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{पञ्चचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -11566,7 +11567,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे श्रीरामसमागमो नाम पञ्चचत्वारिंशत्तमोऽध्यायः॥४५॥}
 
-\dnsub{षट्चत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{षट्चत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -11732,7 +11733,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हयप्रस्थानं नाम षट्चत्वारिंशत्तमोऽध्यायः॥४६॥}
 
-\dnsub{सप्तचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{सप्तचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -11972,7 +11973,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शापकीर्तनं नाम सप्तचत्वारिंशत्तमोऽध्यायः॥४७॥}
 
-\dnsub{अष्टचत्वारिंशत्तमोऽध्यायः}%\resetShloka
+\dnsub{अष्टचत्वारिंशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -12292,7 +12293,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे रामाश्वमेधे शेषवात्स्यायनसंवादे हयनिर्मुक्तिर्नामाष्टचत्वारिंशत्तमोऽध्यायः॥४८॥}
 
-\dnsub{एकोनपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{एकोनपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -12579,7 +12580,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथराज्ञा हयग्रहणं नाम एकोनपञ्चाशत्तमोऽध्यायः॥४९॥}
 
-\dnsub{पञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{पञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -12837,7 +12838,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथदूतयोः संवादो नाम पञ्चाशत्तमोऽध्यायः॥५०॥}
 
-\dnsub{एकपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{एकपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -13137,7 +13138,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे पुष्कलमोचनं नामैकपञ्चाशत्तमोऽध्यायः॥५१॥}
 
-\dnsub{द्विपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{द्विपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -13425,7 +13426,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुरथविजयो नाम द्विपञ्चाशत्तमोऽध्यायः॥५२॥}
 
-\dnsub{त्रिपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{त्रिपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -13594,7 +13595,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रघुनाथसमागमो नाम त्रिपञ्चाशत्तमोऽध्यायः॥५३॥}
 
-\dnsub{चतुःपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{चतुःपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -13752,7 +13753,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवेन हयबन्धनं नाम चतुःपञ्चाशत्तमोऽध्यायः॥५४॥}
 
-\dnsub{पञ्चपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{पञ्चपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{व्यास उवाच}
 
@@ -14084,7 +14085,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे चारनिरीक्षणं नाम पञ्चपञ्चाशत्तमोऽध्यायः॥५५॥}
 
-\dnsub{षट्पञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{षट्पञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -14354,7 +14355,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे भरतवाक्यं नाम षट्पञ्चाशत्तमोऽध्यायः॥५६॥}
 
-\dnsub{सप्तपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{सप्तपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{वात्स्यायन उवाच}
 
@@ -14643,7 +14644,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रजकप्राग्जन्मकथनन्ना सप्तपञ्चाशत्तमोऽध्यायः॥५७॥}
 
-\dnsub{अष्टपञ्चाशत्तमोऽध्यायः}%\resetShloka
+\dnsub{अष्टपञ्चाशत्तमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -14972,7 +14973,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे जानक्या गङ्गादर्शनं नाम अष्टपञ्चाशत्तमोऽध्यायः॥५८॥}
 
-\dnsub{एकोनषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{एकोनषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -15328,7 +15329,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवोत्पत्तिकथानकन्नामैकोनषष्टितमोऽध्यायः॥५९॥}
 
-\dnsub{षष्टितमोऽध्यायः}%\resetShloka
+\dnsub{षष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -15607,7 +15608,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे कुशलवयुद्धे सैन्यपराजय कालजित्सेनानीमरणं नाम षष्टितमोऽध्यायः॥६०॥}
 
-\dnsub{एकषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{एकषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शत्रुघ्न उवाच}
 
@@ -15865,7 +15866,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे हनुमत्पतनन्नामैकषष्टितमोऽध्यायः॥६१॥}
 
-\dnsub{द्विषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{द्विषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -16059,7 +16060,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे लवमूर्च्छा नाम द्विषष्टितमोऽध्यायः॥६२॥}
 
-\dnsub{त्रिषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{त्रिषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -16396,7 +16397,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे शत्रुघ्नमूर्च्छने कुशजयो नाम त्रिषष्टितमोऽध्यायः॥६३॥}
 
-\dnsub{चतुःषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{चतुःषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -16726,7 +16727,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सैन्यजीवनं नाम चतुःषष्टितमोऽध्यायः॥६४॥}
 
-\dnsub{पञ्चषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{पञ्चषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -17056,7 +17057,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे सुमतिनिवेदनं नाम पञ्चषष्टितमोऽध्यायः॥६५॥}
 
-\dnsub{षट्षष्टितमोऽध्यायः}%\resetShloka
+\dnsub{षट्षष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -17814,7 +17815,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे रामायणगानं नाम षट्षष्टितमोऽध्यायः॥६६॥}
 
-\dnsub{सप्तषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{सप्तषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
@@ -18168,7 +18169,7 @@
 
 {॥इति श्रीपद्मपुराणे पातालखण्डे शेषवात्स्यायनसंवादे रामाश्वमेधे यज्ञप्रारम्भो नाम सप्तषष्टितमोऽध्यायः॥६७॥}
 
-\dnsub{अष्टषष्टितमोऽध्यायः}%\resetShloka
+\dnsub{अष्टषष्टितमोऽध्यायः}\resetShloka
 
 \uvacha{शेष उवाच}
 
