--- a/mulam/padma-puranam/ramayana-varnanam.tex
+++ b/mulam/padma-puranam/ramayana-varnanam.tex
@@ -1,9 +1,9 @@
 \sect{द्विचत्वारिंशदधिक-द्विशततमोऽध्यायः --- रामस्यायोध्याप्रवेशः}
 
-\src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः २४२--२४४}{}
+\src{पद्म-पुराणम्}{उत्तरखण्डः}{अध्यायः २४२--२४४}{}
 % \tags{concise, complete}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_५_(पातालखण्डः)/अध्यायः_००१}
+\notes{This chapter presents a summary of the Ramayana, including the birth of Rama, His marriage to Sita, the exile, the killing of Ravana, and the return to Ayodhya.}
+\textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_६_(उत्तरखण्डः)/अध्यायः_२४२}
 \translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc365826.html}
 
 \storymeta
