--- a/mulam/padma-puranam/shudra-tapasa-vadha.tex
+++ b/mulam/padma-puranam/shudra-tapasa-vadha.tex
@@ -1,4 +1,4 @@
-\sect{पञ्चत्रिंशोऽध्यायः --- शूद्रतापसवधः}
+\sect{शूद्रतापसवधः}
 
 \src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३६}{१--१८५}
 % \tags{concise, complete}
