--- a/mulam/padma-puranam/vamana-prathishtha.tex
+++ b/mulam/padma-puranam/vamana-prathishtha.tex
@@ -1,4 +1,4 @@
-\sect{अष्टात्रिंशोऽध्यायः --- वामनप्रतिष्ठा}
+\sect{वामनप्रतिष्ठा}
 
 \src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३८}{१--१९४}
 % \tags{concise, complete}
