--- a/mulam/padma-puranam/yajna-nivaranam.tex
+++ b/mulam/padma-puranam/yajna-nivaranam.tex
@@ -1,8 +1,8 @@
-\sect{सप्तत्रिंशोऽध्यायः --- यज्ञनिवारणम्}
+\sect{यज्ञनिवारणम्}
 
 \src{पद्म-पुराणम्}{सृष्टिखण्डम्}{अध्यायः ३७}{१--१७१}
 % \tags{concise, complete}
-\notes{This chapter describes Rāma’s Abstaining from the Performance of Rājasūya yajna.}
+\notes{This chapter describes Rāma's Abstaining from the Performance of Rājasūya yajna.}
 \textlink{https://sa.wikisource.org/wiki/पद्मपुराणम्/खण्डः_१_(सृष्टिखण्डम्)/अध्यायः_३७}
 \translink{https://www.wisdomlib.org/hinduism/book/the-padma-purana/d/doc364160.html}
 
