--- a/mulam/saura-puranam/ikshvaku-vamsha-nrpa-kathanam.tex
+++ b/mulam/saura-puranam/ikshvaku-vamsha-nrpa-kathanam.tex
@@ -1,16 +1,17 @@
 \chapt{सौरपुराणम्}
 
+\sect{इक्ष्वाकुकुलसम्भवनृपमालिका-कथनम्}
+
 \src{सौरपुराणम्}{}{अध्यायः ३०}{श्लोकाः ४८--६९}
 \vakta{}
 \shrota{}
-\notes{This chapter briefly recounts the life of Lord Rama---His divine birth, marriage to Sita, exile, Sita’s abduction by Ravana, the alliance with Hanuman and Sugriva, the war in Lanka, and His triumphant return and coronation. It concludes with a lineage of Rama's descendants from Lava/Kuśa.}
+\notes{This chapter briefly recounts the life of Lord Rama---His divine birth, marriage to Sita, exile, Sita's abduction by Ravana, the alliance with Hanuman and Sugriva, the war in Lanka, and His triumphant return and coronation. It concludes with a lineage of Rama's descendants from Lava/Kuśa.}
 \textlink{https://archive.org/details/saurapurana1924compl/page/97/mode/2up}
 \translink{}
 
 \storymeta
 
 
-\sect{त्रिंशोऽध्यायः --- इक्ष्वाकुकुलसम्भवनृपमालिका-कथनम्}
 
 \addtocounter{shlokacount}{47}
 
