--- a/mulam/valmiki-ramayanam/SankshepaRamayanam.tex
+++ b/mulam/valmiki-ramayanam/SankshepaRamayanam.tex
@@ -6,7 +6,7 @@
 \vakta{नारदः}
 \shrota{वाल्मीकिः}
 \tags{concise, complete}
-\notes{Origin of the Ramayana from Narada’s narration to Valmiki.}
+\notes{Origin of the Ramayana from Narada's narration to Valmiki.}
 \textlink{}
 \translink{}
 
