--- a/mulam/shiva-puranam/rameshvara-mahatmyam.tex
+++ b/mulam/shiva-puranam/rameshvara-mahatmyam.tex
@@ -208,3 +208,5 @@
 {रामेश्वराभिधं दिव्यं शृण्वतां पापहारकम्} %॥४५।
 
 ॥इति श्रीशिवमहापुराणे चतुर्थ्यां कोटिरुद्रसन्तायां रामेश्वरमाहात्म्यवर्णनं नामैकत्रिंशोऽध्यायः॥
+
+\closesection
