--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -59,19 +59,27 @@
     \input{padma-puranam/ramayana-varnanam}
     \input{brahma-puranam/ananta-vasudeva-mahatmyam}
     \input{brahma-puranam/vishnorpradurbhava}
+    \input{brahmavaivarta-puranam/ramacharitam}
     \input{shiva-puranam/rameshvara-mahatmyam}
     \input{saura-puranam/ikshvaku-vamsha-nrpa-kathanam}
+    \input{vishnu-puranam/vishnu-puranam-ramayanam}
+    \input{harivamsha/ramakatha}
     
     \part{रामायणान्तर्गताः कथाः}
     \input{devi-bhagavatam/VedavatiCharitram}
+    \input{naradiya-puranam/lakshmanachala-mahatmayam}
+    \input{naradiya-puranam/hanumaccharitram}
     \input{brahma-puranam/rama-tirtha}
     \input{brahma-puranam/sahasra-kunda-tirtha}
+    \input{brahmavaivarta-puranam/vedavati-katha}
     \input{padma-puranam/markandeya-ashrama-darshanam}
     \input{padma-puranam/shudra-tapasa-vadha}
     \input{padma-puranam/rama-agastya-samvada}
     \input{padma-puranam/yajna-nivaranam}
     \input{padma-puranam/vamana-prathishtha}
     \input{padma-puranam/rama-ashvamedha-prakaranam}
+    \input{vishnudharmottara-puranam/bharata-prasthana}
+    \input{shiva-puranam/rama-pariksha}
     
     \part{अनुबन्धाः}
     \begingroup
